执行上下文三个阶段

--- a/upanddowncontext.html
+++ b/upanddowncontext.html
@@ -23,7 +23,15 @@
 
      C 确定 this 的指向：
 
-  
+      总结：在一段 js 脚本执行之前，要先解析代码，解析的时候会先创建一个全局执行上下文环境，先把代码中即将执行的变量，函数声明都拿出来。变量先赋值为 undefined,函数先声明好可使用，然后在正式执行程序；
+
+    二  执行阶段；
+
+      执行变量赋值，代码执行；
+
+    三 回收阶段；
+
+    指向上下文出栈等待虚拟机回收执行上下文；
   
   
   
